RESOLVED FIXED 179515
REGRESSION(r224267): WebViews scheduled with custom run loop modes don't load
https://bugs.webkit.org/show_bug.cgi?id=179515
Summary REGRESSION(r224267): WebViews scheduled with custom run loop modes don't load
Alex Christensen
Reported 2017-11-09 17:05:22 PST
REGRESSION(r224267): WebViews scheduled with custom run loop modes don't load
Attachments
Patch (27.07 KB, patch)
2017-11-09 17:56 PST, Alex Christensen
no flags
Patch (25.74 KB, patch)
2017-11-09 19:00 PST, Alex Christensen
no flags
Patch (19.75 KB, patch)
2017-11-09 20:56 PST, Alex Christensen
no flags
Patch (19.71 KB, patch)
2017-11-09 21:23 PST, Alex Christensen
aestes: review+
Alex Christensen
Comment 1 2017-11-09 17:56:36 PST
Build Bot
Comment 2 2017-11-09 17:58:43 PST
Attachment 326521 [details] did not pass style-queue: ERROR: Source/WTF/wtf/NeverDestroyed.h:26: Use #pragma once instead of #ifndef for header guard. [build/header_guard] [5] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2017-11-09 18:24:53 PST
Comment on attachment 326521 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=326521&action=review > Source/WTF/ChangeLog:15 > + Unfortunately we need to go back to #ifdef guards because different copies of this header are included while building WTF. Wat > Source/WTF/wtf/mac/MainThreadMac.mm:125 > +static RetainPtr<NSArray<NSString *>> nsArrayFromVector(const Vector<String>& strings) The name of this function should be way more clear that it does crazy things.
Alex Christensen
Comment 4 2017-11-09 19:00:03 PST
Geoffrey Garen
Comment 5 2017-11-09 20:11:06 PST
Comment on attachment 326531 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=326531&action=review > Source/WebCore/platform/network/mac/ResourceHandleMac.mm:277 > + RetainPtr<NSArray<NSString *>> runLoopModes; > + if (auto* scheduledPairs = d->m_context->scheduledRunLoopPairs()) { > + runLoopModes = adoptNS([[NSMutableArray alloc] initWithCapacity:scheduledPairs->size()]); > + for (auto& pair : *scheduledPairs) > + [runLoopModes addObject:(NSString *)pair->mode()]; > + } Can we just pass though the SchedulePairHashSet instead of copying into an NSArray *? Reasons to prefer: (1) A full fix for this bug requires honoring not just the run loop mode but also the run loop, which need not be the main run loop. (2) It's nice to pass C++ types to C++ code -- and faster too.
Alex Christensen
Comment 6 2017-11-09 20:56:52 PST
Alex Christensen
Comment 7 2017-11-09 21:23:23 PST
Alex Christensen
Comment 8 2017-11-10 09:31:15 PST
Radar WebKit Bug Importer
Comment 9 2017-11-15 09:37:36 PST
Note You need to log in before you can comment on or make changes to this bug.