REGRESSION(r224267): WebViews scheduled with custom run loop modes don't load https://bugs.webkit.org/show_bug.cgi?id=179515 Source/WebCore:

<rdar://problem/35445245>

Reviewed by Andy Estes.

Covered by a new API test which would have timed out without this change.

* platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.mm:
(schedulePairHashSet):
Collect run loop modes from the NetworkingContext similarly to how we did before https://trac.webkit.org/changeset/224267/webkit#file40
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:didReceiveAuthenticationChallenge:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:canAuthenticateAgainstProtectionSpace:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:didReceiveResponse:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:didReceiveData:lengthReceived:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:didSendBodyData:totalBytesWritten:totalBytesExpectedToWrite:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate connectionDidFinishLoading:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:didFailWithError:]):
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:willCacheResponse:]):

Source/WTF:

<rdar://problem/35445245>

Reviewed by Andy Estes.

* wtf/MainThread.cpp:
(WTF::callOnMainThread):
* wtf/MainThread.h:
(WTF::callOnMainThread):
(WTF::scheduleDispatchFunctionsOnMainThread):
* wtf/generic/MainThreadGeneric.cpp:
(WTF::scheduleDispatchFunctionsOnMainThread):
* wtf/mac/MainThreadMac.mm:
(WTF::scheduleDispatchFunctionsOnMainThread):
* wtf/win/MainThreadWin.cpp:
(WTF::scheduleDispatchFunctionsOnMainThread):
Add an optional parameter which is an array of run loop mode names to pass to performSelectorOnMainThread.

Tools:


Reviewed by Andy Estes.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/WebViewScheduleInRunLoop.mm: Added.
(-[ScheduleInRunLoopDelegate webView:didFinishLoadForFrame:]):
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/195578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224687 268f45cc-cd09-0410-ab3c-d52691b4dbfc