Source/WTF/wtf/generic/MainThreadGeneric.cpp
@@ -67,7 +67,7 @@ void initializeMainThreadPlatform()
 {
 }
 
-void scheduleDispatchFunctionsOnMainThread()
+void scheduleDispatchFunctionsOnMainThread(SchedulePairHashSet*)
 {
     // Use a RunLoop::Timer instead of RunLoop::dispatch() to be able to use a different priority and
     // avoid the double queue because dispatchOnMainThread also queues the functions.
